[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerScript.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 39.4667, 34.6667 )

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Fall"

[sub_resource type="Animation" id=3]
resource_name = "Idle"

[sub_resource type="Animation" id=4]
resource_name = "Run"

[sub_resource type="CircleShape2D" id=6]
radius = 104.335

[sub_resource type="AnimationNodeAnimation" id=7]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5.36442e-07, -1.07288e-06 )
scale = Vector2( 0.3125, 0.625 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AttackArea" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AttackArea"]
shape = SubResource( 5 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fall = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Run = SubResource( 4 )

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2( 0, -2.5 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 18.204 )

[node name="WallRaycast" type="Node2D" parent="."]

[node name="RayCastSides" type="RayCast2D" parent="WallRaycast"]
position = Vector2( 10.2442, -13.1966 )
rotation = 1.5708
enabled = true
cast_to = Vector2( -0.014164, 20.5488 )

[node name="RayCastSides2" type="RayCast2D" parent="WallRaycast"]
position = Vector2( 10.1371, 11.0243 )
rotation = 1.5708
enabled = true
cast_to = Vector2( -0.0271568, 20.7394 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[node name="DetectionArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 7 )
anim_player = NodePath("../AnimationPlayer")

[connection signal="area_entered" from="Sprite/AttackArea" to="." method="_on_AttackArea_area_entered"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_DetectionArea_area_exited"]
